<resources>
    <string name="app_name">PassManager</string>

    <string name="add_password">Ajouter un mot de passe</string>
    <string name="menu_search">Rechercher</string>
    <string name="menu_import">Importer</string>
    <string name="menu_export">Exporter</string>
    <string name="menu_reset">Réinitialiser</string>
    <string name="delete_password">Supprimer un mot de passe</string>
    <string name="item_description">Libellé</string>
    <string name="item_account">example@example.com</string>
    <string name="item_view">Voir le mot de passe</string>
    <string name="fragment_list">Mots de passe</string>
    <string name="fragment_add">Ajouter un mot de passe</string>
    <string name="hint_account">Adresse mail / Identifiant</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_description">Libellé</string>
    <string name="button_add">Ajouter</string>
    <string name="empty_list">Aucun compte enregistré</string>
    <string name="button_validate">Valider</string>
    <string name="config_title">Création d\'un mot de passe principal</string>
    <string name="master_password_helper">Ce mot de passe permettra de déverrouiller l\'application.</string>
    <string name="fragment_config">Configuration</string>
    <string name="hint_confirm">Confirmer le mot de passe</string>
    <string name="login_title">Connexion</string>
    <string name="add_account_success">Compte ajouté</string>
    <string name="delete">Supprimer</string>
    <string name="see_title">Consultation</string>
    <string name="title_see">Consulter le mot de passe</string>
    <string name="account_not_found">Ce compte n\'existe plus.</string>
    <string name="title_login">Connexion</string>
    <string name="invalid_password">Mot de passe incorrect.</string>
    <string name="confirm_pw_error">Les deux mots de passe ne sont pas les mêmes.</string>
    <string name="delete_account_success">Compte supprimé</string>
    <string name="reconnect">Votre session a expiré, veuillez vous reconnecter.</string>
    <string name="auth_success">Connexion réussie !</string>
    <string name="biometric_title">Déverrouillage de l\'application</string>
    <string name="biometric_subtitle">Connexion par empreintes digitales</string>
    <string name="biometric_cancel">Annuler</string>
    <string name="not_yet_implemented">Fonctionnalité pas encore implémentée</string>
</resources>