<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/delete_password"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/item_view"
        android:layout_toEndOf="@id/item_icon"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/item_description"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/item_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_description"
        android:layout_toEndOf="@id/item_icon"
        android:layout_toStartOf="@id/item_view"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/item_account"
        android:textColor="?android:attr/textColorPrimary"/>

    <ImageView
        android:id="@+id/item_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_view"
        android:contentDescription="@string/item_view"/>
</RelativeLayout>