<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="roboto"
        android:text="@string/config_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/master_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/master_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/password_input"
        app:endIconMode="password_toggle"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_config"
        app:startIconContentDescription="@string/hint_password"
        app:startIconDrawable="@drawable/ic_password"
        app:helperTextEnabled="true"
        app:helperText="@string/master_password_helper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/master_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="50" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_master_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/password_input"
        app:endIconMode="password_toggle"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/master_password_layout"
        app:startIconContentDescription="@string/hint_password"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_master_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="50" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/button_validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/master_password_layout"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>