<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="50dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:startIconDrawable="@drawable/ic_edit"
        app:startIconContentDescription="@string/hint_description"
        android:labelFor="@id/description_input"
        android:hint="@string/hint_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_layout"
        android:layout_marginBottom="20dp"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconContentDescription="@string/hint_account"
        android:labelFor="@id/account_input"
        android:hint="@string/hint_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_layout"
        android:layout_marginBottom="40dp"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconContentDescription="@string/hint_password"
        android:labelFor="@id/password_input"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="50" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/filledButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/button_add" />
</RelativeLayout>